Add all Jupyter notebooks edited for entire and actual fake data generation

--- a/fakeDB/fakeData_01_introduction.ipynb
+++ b/fakeDB/fakeData_01_introduction.ipynb
@@ -139,12 +139,12 @@
       "studentSchema:      ['studentID', 'firstName', 'lastName', 'dateOfBirth', 'genre', 'country', 'town', 'email']\n",
       "instructorSchema:   ['instructorID', 'role', 'firstName', 'lastName', 'genre', 'email']\n",
       "courseSchema:       ['courseID', 'discipline', 'courseName', 'courseYear', 'syllabus']\n",
-      "materialSchema:     ['materialID', 'unit', 'materialType', 'name', 'dimension']\n",
       "assessmentSchema:   ['assessmentID', 'assessmentType', 'name', 'thresholdScore', 'maxScore']\n",
+      "materialSchema:     ['materialID', 'unit', 'materialType', 'name', 'dimension']\n",
       "enrollingSchema:    ['course', 'student', 'enrollDate']\n",
       "teachingSchema:     ['course', 'instructor']\n",
-      "learningSchema:     ['course', 'student', 'learning_material', 'accessDate']\n",
-      "gradingSchema:      ['course', 'student', 'assessment', 'score', 'attemptDate']\n"
+      "gradingSchema:      ['course', 'student', 'assessment', 'score', 'attemptDate']\n",
+      "learningSchema:     ['course', 'student', 'learning_material', 'accessDate']\n"
      ]
     }
    ],
@@ -153,12 +153,12 @@
     "print('studentSchema:', ' ' * (18 - len('studentSchema:')), studentSchema)\n",
     "print('instructorSchema:', ' ' * (18 - len('instructorSchema:')), instructorSchema)\n",
     "print('courseSchema:', ' ' * (18 - len('courseSchema:')), courseSchema)\n",
-    "print('materialSchema:', ' ' * (18 - len('materialSchema:')), materialSchema)\n",
     "print('assessmentSchema:', ' ' * (18 - len('assessmentSchema:')), assessmentSchema)\n",
+    "print('materialSchema:', ' ' * (18 - len('materialSchema:')), materialSchema)\n",
     "print('enrollingSchema:', ' ' * (18 - len('enrollingSchema:')), enrollingSchema)\n",
     "print('teachingSchema:', ' ' * (18 - len('teachingSchema:')), teachingSchema)\n",
-    "print('learningSchema:', ' ' * (18 - len('learningSchema:')), learningSchema)\n",
-    "print('gradingSchema:', ' ' * (18 - len('gradingSchema:')), gradingSchema)"
+    "print('gradingSchema:', ' ' * (18 - len('gradingSchema:')), gradingSchema)\n",
+    "print('learningSchema:', ' ' * (18 - len('learningSchema:')), learningSchema)"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
