--- a/fakeDB/fakeData_03_instructorTable.ipynb
+++ b/fakeDB/fakeData_03_instructorTable.ipynb
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 6, 7, 7, 2, 5, 3, 3, 9, 8, 7, 6, 9, 8, 8, 6, 8, 4, 10, 2, 8, 9, 9, 9, 7, 2, 4, 6, 8, 9, 4, 6, 6, 4, 5, 8, 4, 8, 1, 10, 4, 4, 2, 2, 8, 2, 9, 6, 7, 10, 7, 6, 2, 3, 7, 4, 10, 1, 7, 7, 9, 8, 10, 9, 8, 1, 4, 10, 10, 3, 9, 4, 1, 6, 8, 7, 5, 6, 8, 4, 7, 10, 10, 2, 7, 3, 5, 5, 3, 2, 5, 8, 5, 8, 3, 6, 2, 10, 2, 4, 6, 7, 7, 6, 8, 8, 7, 3, 8, 7, 1, 8, 6, 5, 10, 6, 3, 4, 3, 4, 9, 2, 7, 8, 2, 7, 9, 5, 6, 7, 9, 1, 8, 5, 1, 5, 3, 2, 3, 5, 9, 4, 8, 2, 8, 9, 6, 6, 8, 4, 1, 8, 5, 2, 9, 6, 2, 2, 6, 7, 3, 9, 3, 7, 10, 1, 3, 1, 5, 8, 3, 7, 7, 7, 8, 6, 7, 1, 9, 3, 10, 1, 6, 6, 1, 2, 4, 1, 8, 4, 5, 8, 6, 8, 8, 8, 4, 8, 2, 5, 3, 2, 6, 5, 4, 10, 8, 2, 2, 7, 3, 10, 6, 9, 9, 7, 3, 4, 8, 2, 7, 5, 1, 5, 1, 6, 5, 1, 3, 4, 2, 7, 9, 10, 8, 4, 3, 6, 9, 7, 5, 2, 7, 3, 8, 3, 3, 5, 2, 3, 8, 4, 9, 10, 6, 6, 9, 8, 7, 2, 2, 4, 4, 6, 9, 10, 6, 10, 9, 5, 7, 7, 8, 6, 8, 9, 8, 4, 3, 3, 5, 7, 10, 8, 5, 5, 8, 8, 6, 1, 1, 7, 10, 7, 10, 5, 3, 10, 8, 5]\n"
+      "[2, 10, 9, 2, 5, 10, 7, 4, 8, 4, 4, 9, 7, 9, 3, 8, 1, 5, 5, 2, 6, 9, 3, 1, 6, 7, 2, 1, 2, 2, 5, 5, 1, 3, 1, 8, 1, 9, 6, 5, 8, 2, 9, 4, 9, 4, 1, 1, 3, 8, 7, 3, 3, 7, 5, 8, 1, 10, 3, 6, 10, 10, 3, 5, 7, 8, 5, 7, 3, 8, 4, 4, 6, 4, 2, 8, 3, 5, 3, 3, 9, 10, 9, 4, 8, 1, 4, 8, 8, 6, 1, 2, 8, 6, 5, 9, 4, 6, 7, 1, 3, 6, 7, 3, 4, 10, 6, 10, 2, 4, 10, 7, 6, 7, 9, 2, 3, 7, 1, 4, 3, 4, 3, 8, 6, 2, 1, 7, 1, 2, 5, 1, 7, 10, 1, 4, 2, 2, 8, 4, 6, 8, 10, 1, 5, 4, 6, 7, 8, 8, 6, 10, 5, 3, 2, 3, 2, 8, 10, 1, 9, 7, 8, 1, 1, 4, 1, 7, 10, 1, 9, 2, 9, 8, 8, 4, 2, 4, 4, 7, 9, 4, 7, 7, 3, 3, 10, 10, 10, 6, 3, 1, 8, 10, 10, 1, 8, 2, 4, 4, 8, 7, 3, 1, 1, 3, 2, 8, 3, 4, 1, 9, 1, 2, 10, 5, 3, 2, 2, 5, 1, 4, 2, 10, 6, 2, 2, 10, 8, 2, 4, 3, 9, 9, 9, 9, 7, 10, 8, 1, 9, 8, 10, 7, 5, 4, 5, 10, 4, 8, 10, 2, 6, 1, 5, 8, 2, 1, 6, 10, 4, 3, 7, 1, 10, 3, 5, 8, 3, 1, 5, 6, 7, 10, 9, 8, 5, 1, 7, 8, 8, 9, 4, 9, 9, 1, 1, 5, 4, 5, 10, 8, 6, 7, 6, 8, 8, 8, 5, 5]\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "163e194b",
    "metadata": {},
    "outputs": [
@@ -239,56 +239,56 @@
      "output_type": "stream",
      "text": [
       "iID    role                       firstName        lastName              genre         email\n",
-      "1      Senior Teaching Fellow     Abdülsamed       Akça                  male          abdülsamed.akça@yaani.com\n",
-      "2      Professor Emeritus         Lukas            Honing                male          lukas.honing@gmail.com\n",
-      "3      Professor Emeritus         Mick             Veltman               non binary    mick.veltman@yahoo.com\n",
-      "4      Researcher                 Susanne          Dijoux                non binary    susanne.dijoux@club-internet.fr\n",
-      "5      Senior Lecturer            Delfino          Coardi                male          delfino.coardi@alice.it\n",
-      "6      Professor                  Natália          Moura                 female        natália.moura@bol.com.br\n",
-      "7      Associate Professor        Mirthe           Romijn                female        mirthe.romijn@gmail.com\n",
-      "8      Ph.D.                      Vivaan           Iyengar               female        vivaan.iyengar@yahoo.com\n",
-      "9      Lecturer                   Coral            Baquero               female        coral.baquero@hotmail.com\n",
-      "10     Associate Professor        Özpınar          Arslan                male          özpınar.arslan@yahoo.com\n",
-      "11     Lecturer                   Sarıcabay        Akgündüz              non binary    sarıcabay.akgündüz@yaani.com\n",
-      "12     Lecturer                   Vitor            Silva                 male          vitor.silva@hotmail.com\n",
-      "13     Professor                  Julie            Tammerijn             female        julie.tammerijn@hotmail.com\n",
-      "14     Senior Teaching Fellow     Abram            Cheema                male          abram.cheema@gmail.com\n",
-      "15     TeachingFellow             Renee            Kota                  male          renee.kota@gmail.com\n",
-      "16     Professor Emeritus         Erinçer          Yorulmaz              male          erinçer.yorulmaz@yandex.com\n",
-      "17     TeachingFellow             Bryan            Silva                 male          bryan.silva@hotmail.com\n",
-      "18     Ph.D.                      Daniel           Maia                  male          daniel.maia@hotmail.com\n",
-      "19     Assistant Professor        Johan            Andersson             male          johan.andersson@telia.com\n",
-      "20     Assistant Professor        Benjamim         Loureiro              male          benjamim.loureiro@gmail.com\n",
-      "21     Professor Emeritus         Baccio           Rusticucci            male          baccio.rusticucci@gmail.com\n",
-      "22     Lecturer                   Birgitt          Lindner               female        birgitt.lindner@aol.de\n",
-      "23     Professor                  Annette          Taylor                female        annette.taylor@gmail.com\n",
-      "24     Professor                  Kristina         Strand                female        kristina.strand@swipnet.se\n",
-      "25     Senior Teaching Fellow     Jens             Jenssen               non binary    jens.jenssen@gmail.com\n",
-      "26     TeachingFellow             Vargın           Yorulmaz              male          vargın.yorulmaz@gmail.com\n",
-      "27     TeachingFellow             Niek             van Ghoerle           male          niek.van ghoerle@yahoo.com\n",
-      "28     Lecturer                   Neil             Ford                  male          neil.ford@hotmail.com\n",
-      "29     Ph.D.                      Alfredo          Foletti               male          alfredo.foletti@tiscali.it\n",
-      "30     TeachingFellow             Ana              Pires                 female        ana.pires@sapo.pt\n",
-      "31     Professor Emeritus         Luiz Gustavo     da Conceição          male          luiz gustavo.da conceição@uol.com.br\n",
-      "32     Assistant Professor        Delfino          Gritti                male          delfino.gritti@hotmail.com\n",
-      "33     TeachingFellow             Michael          Booth                 male          michael.booth@yahoo.com\n",
-      "34     Ph.D.                      Lars             Eckbauer              male          lars.eckbauer@googlemail.com\n",
-      "35     Researcher                 Shaan            Sandhu                female        shaan.sandhu@gmail.com\n",
-      "36     Senior Teaching Fellow     Matthijs         van 't Houteveen      male          matthijs.van 't houteveen@gmail.com\n",
-      "37     Professor Emeritus         Alexandre        da Paz                male          alexandre.da paz@ig.com.br\n",
-      "38     Professor                  Filipe           Fernandes             male          filipe.fernandes@clix.pt\n",
-      "39     Associate Professor        Kelsey           Logan                 female        kelsey.logan@yahoo.com\n",
-      "40     Assistant Professor        Léon             Bruneau               male          léon.bruneau@tele2.fr\n",
-      "41     Assistant Professor        Christian        Eriksson              male          christian.eriksson@telia.com\n",
-      "42     Lecturer                   Laura            Galdikas              male          laura.galdikas@hotmail.com\n",
-      "43     Senior Lecturer            Sakip            Demir                 male          sakip.demir@outlook.com\n",
-      "44     Senior Lecturer            Tom              Versluijs             male          tom.versluijs@gmail.com\n",
-      "45     Ph.D.                      Youssef          Drysdale              male          youssef.drysdale@hotmail.com\n",
-      "46     Assistant Professor        Kızıltunç        Durmuş                male          kızıltunç.durmuş@yahoo.com\n",
-      "47     Senior Teaching Fellow     Phyllis          Gonzalez              female        phyllis.gonzalez@yahoo.com\n",
-      "48     Senior Teaching Fellow     Patrick          Brown                 male          patrick.brown@gmail.com\n",
-      "49     Researcher                 Manuel           Lourenço              non binary    manuel.lourenço@sapo.pt\n",
-      "50     Senior Lecturer            Birgit           Durdu                 male          birgit.durdu@yaani.com\n",
+      "1      Senior Teaching Fellow     Marco            Plaza                 male          marco.plaza@yahoo.com\n",
+      "2      Senior Teaching Fellow     Dominyka         Kalvelis              male          dominyka.kalvelis@gmail.com\n",
+      "3      Professor                  Sissel           Bakken                female        sissel.bakken@hotmail.com\n",
+      "4      Senior Teaching Fellow     João Guilherme   Ferreira              male          joão guilherme.ferreira@uol.com.br\n",
+      "5      Associate Professor        Petrona          Baños                 female        petrona.baños@yahoo.com\n",
+      "6      Associate Professor        Mark             Taylor                male          mark.taylor@yahoo.com\n",
+      "7      Senior Teaching Fellow     Stein            Isaksen               non binary    stein.isaksen@gmail.com\n",
+      "8      Senior Lecturer            Mario            Valcárcel             male          mario.valcárcel@hotmail.com\n",
+      "9      Assistant Professor        Edgar            Pires                 male          edgar.pires@sapo.pt\n",
+      "10     Senior Teaching Fellow     Christian        Lowe                  male          christian.lowe@hotmail.com\n",
+      "11     Ph.D.                      Ojas             Ram                   male          ojas.ram@yahoo.com\n",
+      "12     Ph.D.                      Renée            Chevalier             female        renée.chevalier@voila.fr\n",
+      "13     Lecturer                   Jayda            Scholten              non binary    jayda.scholten@hotmail.com\n",
+      "14     Ph.D.                      Julie            Jacob                 female        julie.jacob@tele2.fr\n",
+      "15     Professor Emeritus         Erika            Travaglia             female        erika.travaglia@vodafone.it\n",
+      "16     Senior Teaching Fellow     Plácido          Cobo                  male          plácido.cobo@gmail.com\n",
+      "17     Ph.D.                      Jorunn           Sæther                female        jorunn.sæther@yahoo.com\n",
+      "18     Professor Emeritus         Juozas           Butkus                female        juozas.butkus@yahoo.com\n",
+      "19     Senior Teaching Fellow     Luciana          Silva                 female        luciana.silva@clix.pt\n",
+      "20     Lecturer                   Maurilio         Legnante              male          maurilio.legnante@live.com\n",
+      "21     Senior Lecturer            William          Webster               male          william.webster@outlook.com\n",
+      "22     Ph.D.                      Simonas          Urbonas               female        simonas.urbonas@gmail.com\n",
+      "23     Professor Emeritus         Olalla           Frías                 female        olalla.frías@hotmail.com\n",
+      "24     Lecturer                   Magrit           Binner                female        magrit.binner@gmail.com\n",
+      "25     Assistant Professor        Davi Luiz        Dias                  male          davi luiz.dias@bol.com.br\n",
+      "26     Senior Lecturer            Liana            Giunti                non binary    liana.giunti@tin.it\n",
+      "27     Professor Emeritus         Marcelo          Campos                male          marcelo.campos@hotmail.com\n",
+      "28     Professor                  Benas            Nausėda               female        benas.nausėda@hotmail.com\n",
+      "29     Lecturer                   Corrado          Pacetti               male          corrado.pacetti@hotmail.com\n",
+      "30     TeachingFellow             Tony             Holzapfel             male          tony.holzapfel@aol.de\n",
+      "31     Assistant Professor        Oorja            Wagle                 female        oorja.wagle@yahoo.com\n",
+      "32     TeachingFellow             Christine        Guillaume             female        christine.guillaume@orange.fr\n",
+      "33     Senior Lecturer            Joanna           Smith                 female        joanna.smith@hotmail.co.uk\n",
+      "34     TeachingFellow             Carmina          Casanovas             female        carmina.casanovas@gmail.com\n",
+      "35     Lecturer                   Regina           Rivera                female        regina.rivera@gmail.com\n",
+      "36     Lecturer                   Soykut           Bilge                 male          soykut.bilge@yandex.com\n",
+      "37     Associate Professor        Chloé            Horrocks              female        chloé.horrocks@gmail.com\n",
+      "38     Ph.D.                      Gianna           Barberini             female        gianna.barberini@tele2.it\n",
+      "39     Researcher                 Fredrik          Strand                male          fredrik.strand@yahoo.com\n",
+      "40     Senior Lecturer            Vanessa          Coppola               female        vanessa.coppola@gmail.com\n",
+      "41     Associate Professor        Anthony          Wright                male          anthony.wright@gmail.com\n",
+      "42     Senior Teaching Fellow     Afonso           Monteiro              male          afonso.monteiro@hotmail.com\n",
+      "43     Senior Lecturer            Edvardas         Jankauskas            female        edvardas.jankauskas@gmail.com\n",
+      "44     Senior Lecturer            Per              Hedberg               male          per.hedberg@yahoo.de\n",
+      "45     Senior Teaching Fellow     Maria Luiza      Melo                  female        maria luiza.melo@bol.com.br\n",
+      "46     Senior Teaching Fellow     Rhys             Fletcher              male          rhys.fletcher@yahoo.co.uk\n",
+      "47     Senior Teaching Fellow     Claudine         Lambert               female        claudine.lambert@dbmail.com\n",
+      "48     Professor                  Jolanta          Galdikas              female        jolanta.galdikas@yahoo.com\n",
+      "49     Professor                  Lorraine         Evans                 female        lorraine.evans@yahoo.co.uk\n",
+      "50     Researcher                 Leandro          Silva                 male          leandro.silva@gmail.com\n",
       "[...]\n"
      ]
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "96e86741",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
