--- a/fakeDB/fakeData_04_courseTable.ipynb
+++ b/fakeDB/fakeData_04_courseTable.ipynb
@@ -297,56 +297,56 @@
      "output_type": "stream",
      "text": [
       "courseID    discipline                 courseName                      courseYear  syllabus\n",
-      "1           IT                         Introduction to the Internet o  2022        http://learning_platform.com/introductio\n",
-      "2           IT                         Agile Software Development      2022        http://learning_platform.com/agilesoftwa\n",
-      "3           IT                         Autodesk Certified Professiona  2022        http://learning_platform.com/autodeskcer\n",
-      "4           IT                         Fundamentals of Graphic Design  2022        http://learning_platform.com/fundamental\n",
-      "5           IT                         Java for Android                2022        http://learning_platform.com/javaforandr\n",
-      "6           IT                         Introduction to Programming wi  2022        http://learning_platform.com/introductio\n",
-      "7           IT                         Cryptography I                  2022        http://learning_platform.com/cryptograph\n",
-      "8           IT                         HTML, CSS, and Javascript for   2022        http://learning_platform.com/htmlcssandj\n",
-      "9           IT                         Google Cloud Big Data and Mach  2022        http://learning_platform.com/googlecloud\n",
-      "10          IT                         Algorithms, Part II             2022        http://learning_platform.com/algorithmsp\n",
-      "11          IT                         Algorithms, Part I              2022        http://learning_platform.com/algorithmsp\n",
-      "12          IT                         Divide and Conquer, Sorting an  2022        http://learning_platform.com/divideandco\n",
-      "13          IT                         Cloud Computing Concepts, Part  2022        http://learning_platform.com/cloudcomput\n",
-      "14          IT                         Programming for Everybody (Get  2022        http://learning_platform.com/programming\n",
-      "15          IT                         Design and Make Infographics (  2022        http://learning_platform.com/designandma\n",
-      "16          IT                         Cloud Computing Basics (Cloud   2022        http://learning_platform.com/cloudcomput\n",
-      "17          IT                         Hadoop Platform and Applicatio  2022        http://learning_platform.com/hadoopplatf\n",
-      "18          IT                         Algorithmic Toolbox             2022        http://learning_platform.com/algorithmic\n",
-      "19          IT                         Internet History, Technology,   2022        http://learning_platform.com/internethis\n",
-      "20          IT                         Introduction to User Experienc  2022        http://learning_platform.com/introductio\n",
-      "21          IT                         English for Career Development  2022        http://learning_platform.com/englishforc\n",
-      "22          IT                         Data Visualization with Python  2022        http://learning_platform.com/datavisuali\n",
-      "23          IT                         Computer Science: Programming   2022        http://learning_platform.com/computersci\n",
-      "24          IT                         AI For Everyone                 2022        http://learning_platform.com/aiforeveryo\n",
-      "25          IT                         Programming Foundations with J  2022        http://learning_platform.com/programming\n",
-      "26          IT                         An Introduction to Interactive  2022        http://learning_platform.com/anintroduct\n",
-      "27          IT                         Code Yourself! An Introduction  2022        http://learning_platform.com/codeyoursel\n",
-      "28          IT                         Introducci\\'f3n a Java          2022        http://learning_platform.com/introducci\\\n",
-      "29          IT                         Fundamentals of GIS             2022        http://learning_platform.com/fundamental\n",
-      "30          IT                         Python and Statistics for Fina  2022        http://learning_platform.com/pythonandst\n",
-      "31          IT                         Cybersecurity and Its Ten Doma  2022        http://learning_platform.com/cybersecuri\n",
-      "32          IT                         Crash Course on Python          2022        http://learning_platform.com/crashcourse\n",
-      "33          IT                         Design and Interpretation of C  2022        http://learning_platform.com/designandin\n",
-      "34          IT                         Google Cloud Fundamentals: Cor  2022        http://learning_platform.com/googlecloud\n",
-      "35          IT                         Design Thinking for Innovation  2022        http://learning_platform.com/designthink\n",
-      "36          IT                         Programming Languages, Part A   2022        http://learning_platform.com/programming\n",
-      "37          IT                         Introduction to Cybersecurity   2022        http://learning_platform.com/introductio\n",
-      "38          IT                         How To Create a Website in a W  2022        http://learning_platform.com/howtocreate\n",
-      "39          IT                         Functional Programming Princip  2022        http://learning_platform.com/functionalp\n",
-      "40          IT                         SQL for Data Science            2022        http://learning_platform.com/sqlfordatas\n",
-      "41          IT                         Programming Fundamentals        2022        http://learning_platform.com/programming\n",
-      "42          IT                         Computer Architecture           2022        http://learning_platform.com/computerarc\n",
-      "43          IT                         Build a Modern Computer         2022        http://learning_platform.com/buildamoder\n",
-      "44          IT                         Getting Started with AWS Machi  2022        http://learning_platform.com/gettingstar\n",
-      "45          IT                         Introduction to HTML5           2022        http://learning_platform.com/introductio\n",
-      "46          IT                         Foundations of User Experience  2022        http://learning_platform.com/foundations\n",
-      "47          IT                         Introduction to Google SEO      2022        http://learning_platform.com/introductio\n",
-      "48          IT                         Visual Elements of User Interf  2022        http://learning_platform.com/visualeleme\n",
-      "49          IT                         Fundamentals of Visualization   2022        http://learning_platform.com/fundamental\n",
-      "50          IT                         Agile with Atlassian Jira       2022        http://learning_platform.com/agilewithat\n",
+      "1           IT                         Introduction to the Internet o  2022        http://learning_platform.com/i\n",
+      "2           IT                         Agile Software Development      2022        http://learning_platform.com/a\n",
+      "3           IT                         Autodesk Certified Professiona  2022        http://learning_platform.com/a\n",
+      "4           IT                         Fundamentals of Graphic Design  2022        http://learning_platform.com/f\n",
+      "5           IT                         Java for Android                2022        http://learning_platform.com/j\n",
+      "6           IT                         Introduction to Programming wi  2022        http://learning_platform.com/i\n",
+      "7           IT                         Cryptography I                  2022        http://learning_platform.com/c\n",
+      "8           IT                         HTML, CSS, and Javascript for   2022        http://learning_platform.com/h\n",
+      "9           IT                         Google Cloud Big Data and Mach  2022        http://learning_platform.com/g\n",
+      "10          IT                         Algorithms, Part II             2022        http://learning_platform.com/a\n",
+      "11          IT                         Algorithms, Part I              2022        http://learning_platform.com/a\n",
+      "12          IT                         Divide and Conquer, Sorting an  2022        http://learning_platform.com/d\n",
+      "13          IT                         Cloud Computing Concepts, Part  2022        http://learning_platform.com/c\n",
+      "14          IT                         Programming for Everybody (Get  2022        http://learning_platform.com/p\n",
+      "15          IT                         Design and Make Infographics (  2022        http://learning_platform.com/d\n",
+      "16          IT                         Cloud Computing Basics (Cloud   2022        http://learning_platform.com/c\n",
+      "17          IT                         Hadoop Platform and Applicatio  2022        http://learning_platform.com/h\n",
+      "18          IT                         Algorithmic Toolbox             2022        http://learning_platform.com/a\n",
+      "19          IT                         Internet History, Technology,   2022        http://learning_platform.com/i\n",
+      "20          IT                         Introduction to User Experienc  2022        http://learning_platform.com/i\n",
+      "21          IT                         English for Career Development  2022        http://learning_platform.com/e\n",
+      "22          IT                         Data Visualization with Python  2022        http://learning_platform.com/d\n",
+      "23          IT                         Computer Science: Programming   2022        http://learning_platform.com/c\n",
+      "24          IT                         AI For Everyone                 2022        http://learning_platform.com/a\n",
+      "25          IT                         Programming Foundations with J  2022        http://learning_platform.com/p\n",
+      "26          IT                         An Introduction to Interactive  2022        http://learning_platform.com/a\n",
+      "27          IT                         Code Yourself! An Introduction  2022        http://learning_platform.com/c\n",
+      "28          IT                         Introducci\\'f3n a Java          2022        http://learning_platform.com/i\n",
+      "29          IT                         Fundamentals of GIS             2022        http://learning_platform.com/f\n",
+      "30          IT                         Python and Statistics for Fina  2022        http://learning_platform.com/p\n",
+      "31          IT                         Cybersecurity and Its Ten Doma  2022        http://learning_platform.com/c\n",
+      "32          IT                         Crash Course on Python          2022        http://learning_platform.com/c\n",
+      "33          IT                         Design and Interpretation of C  2022        http://learning_platform.com/d\n",
+      "34          IT                         Google Cloud Fundamentals: Cor  2022        http://learning_platform.com/g\n",
+      "35          IT                         Design Thinking for Innovation  2022        http://learning_platform.com/d\n",
+      "36          IT                         Programming Languages, Part A   2022        http://learning_platform.com/p\n",
+      "37          IT                         Introduction to Cybersecurity   2022        http://learning_platform.com/i\n",
+      "38          IT                         How To Create a Website in a W  2022        http://learning_platform.com/h\n",
+      "39          IT                         Functional Programming Princip  2022        http://learning_platform.com/f\n",
+      "40          IT                         SQL for Data Science            2022        http://learning_platform.com/s\n",
+      "41          IT                         Programming Fundamentals        2022        http://learning_platform.com/p\n",
+      "42          IT                         Computer Architecture           2022        http://learning_platform.com/c\n",
+      "43          IT                         Build a Modern Computer         2022        http://learning_platform.com/b\n",
+      "44          IT                         Getting Started with AWS Machi  2022        http://learning_platform.com/g\n",
+      "45          IT                         Introduction to HTML5           2022        http://learning_platform.com/i\n",
+      "46          IT                         Foundations of User Experience  2022        http://learning_platform.com/f\n",
+      "47          IT                         Introduction to Google SEO      2022        http://learning_platform.com/i\n",
+      "48          IT                         Visual Elements of User Interf  2022        http://learning_platform.com/v\n",
+      "49          IT                         Fundamentals of Visualization   2022        http://learning_platform.com/f\n",
+      "50          IT                         Agile with Atlassian Jira       2022        http://learning_platform.com/a\n",
       "[...]\n"
      ]
     }
@@ -359,7 +359,7 @@
     "    name = courseDict['courseName'][i]\n",
     "    year = courseDict['courseYear'][i]\n",
     "    syll = courseDict['syllabus'][i]\n",
-    "    print(cID, ' ' * (10 - len(str(cID))), cat, ' ' * (25 - len(cat)), name[0 : 30], ' ' * (30 - len(name[0 : 30])), year, ' ' * (10 - len(str(year))), syll[0 : 40])\n",
+    "    print(cID, ' ' * (10 - len(str(cID))), cat, ' ' * (25 - len(cat)), name[0 : 30], ' ' * (30 - len(name[0 : 30])), year, ' ' * (10 - len(str(year))), syll[0 : 30])\n",
     "print('[...]')"
    ]
   },
