--- a/fakeDB/fakeData_05_assessmentTable.ipynb
+++ b/fakeDB/fakeData_05_assessmentTable.ipynb
@@ -307,56 +307,56 @@
      "output_type": "stream",
      "text": [
       "aID    assessType       name                                      thresholdScore   maxScore\n",
-      "1      quiz             Introduction to the Internet of Thi       60               100\n",
+      "1      project          Introduction to the Internet of Thi       60               100\n",
       "2      quiz             Agile Software Development  - Final       60               100\n",
       "3      project          Autodesk Certified Professional: Au       60               100\n",
       "4      project          Fundamentals of Graphic Design  - F       60               100\n",
-      "5      project          Java for Android  - Final assessmen       60               100\n",
-      "6      quiz             Introduction to Programming with MA       60               100\n",
+      "5      quiz             Java for Android  - Final assessmen       60               100\n",
+      "6      project          Introduction to Programming with MA       60               100\n",
       "7      project          Cryptography I  - Final assessment        60               100\n",
-      "8      project          HTML, CSS, and Javascript for Web D       60               100\n",
-      "9      project          Google Cloud Big Data and Machine L       60               100\n",
-      "10     quiz             Algorithms, Part II  - Final assess       60               100\n",
+      "8      quiz             HTML, CSS, and Javascript for Web D       60               100\n",
+      "9      quiz             Google Cloud Big Data and Machine L       60               100\n",
+      "10     project          Algorithms, Part II  - Final assess       60               100\n",
       "11     quiz             Algorithms, Part I  - Final assessm       60               100\n",
-      "12     quiz             Divide and Conquer, Sorting and Sea       60               100\n",
-      "13     quiz             Cloud Computing Concepts, Part 1  -       60               100\n",
+      "12     project          Divide and Conquer, Sorting and Sea       60               100\n",
+      "13     project          Cloud Computing Concepts, Part 1  -       60               100\n",
       "14     project          Programming for Everybody (Getting        60               100\n",
-      "15     quiz             Design and Make Infographics (Proje       60               100\n",
-      "16     project          Cloud Computing Basics (Cloud 101)        60               100\n",
+      "15     project          Design and Make Infographics (Proje       60               100\n",
+      "16     quiz             Cloud Computing Basics (Cloud 101)        60               100\n",
       "17     project          Hadoop Platform and Application Fra       60               100\n",
       "18     quiz             Algorithmic Toolbox  - Final assess       60               100\n",
-      "19     project          Internet History, Technology, and S       60               100\n",
-      "20     project          Introduction to User Experience Des       60               100\n",
+      "19     quiz             Internet History, Technology, and S       60               100\n",
+      "20     quiz             Introduction to User Experience Des       60               100\n",
       "21     project          English for Career Development  - F       60               100\n",
       "22     project          Data Visualization with Python  - F       60               100\n",
-      "23     project          Computer Science: Programming with        60               100\n",
-      "24     quiz             AI For Everyone  - Final assessment       60               100\n",
+      "23     quiz             Computer Science: Programming with        60               100\n",
+      "24     project          AI For Everyone  - Final assessment       60               100\n",
       "25     quiz             Programming Foundations with JavaSc       60               100\n",
-      "26     project          An Introduction to Interactive Prog       60               100\n",
-      "27     project          Code Yourself! An Introduction to P       60               100\n",
-      "28     quiz             Introducci\\'f3n a Java  - Final ass       60               100\n",
-      "29     quiz             Fundamentals of GIS  - Final assess       60               100\n",
-      "30     quiz             Python and Statistics for Financial       60               100\n",
+      "26     quiz             An Introduction to Interactive Prog       60               100\n",
+      "27     quiz             Code Yourself! An Introduction to P       60               100\n",
+      "28     project          Introducci\\'f3n a Java  - Final ass       60               100\n",
+      "29     project          Fundamentals of GIS  - Final assess       60               100\n",
+      "30     project          Python and Statistics for Financial       60               100\n",
       "31     quiz             Cybersecurity and Its Ten Domains         60               100\n",
       "32     project          Crash Course on Python  - Final ass       60               100\n",
-      "33     project          Design and Interpretation of Clinic       60               100\n",
-      "34     quiz             Google Cloud Fundamentals: Core Inf       60               100\n",
-      "35     project          Design Thinking for Innovation  - F       60               100\n",
+      "33     quiz             Design and Interpretation of Clinic       60               100\n",
+      "34     project          Google Cloud Fundamentals: Core Inf       60               100\n",
+      "35     quiz             Design Thinking for Innovation  - F       60               100\n",
       "36     quiz             Programming Languages, Part A  - Fi       60               100\n",
       "37     project          Introduction to Cybersecurity Tools       60               100\n",
       "38     project          How To Create a Website in a Weeken       60               100\n",
       "39     project          Functional Programming Principles i       60               100\n",
       "40     project          SQL for Data Science  - Final asses       60               100\n",
-      "41     quiz             Programming Fundamentals  - Final a       60               100\n",
-      "42     project          Computer Architecture  - Final asse       60               100\n",
+      "41     project          Programming Fundamentals  - Final a       60               100\n",
+      "42     quiz             Computer Architecture  - Final asse       60               100\n",
       "43     project          Build a Modern Computer  - Final as       60               100\n",
       "44     project          Getting Started with AWS Machine Le       60               100\n",
       "45     quiz             Introduction to HTML5  - Final asse       60               100\n",
-      "46     project          Foundations of User Experience (UX)       60               100\n",
-      "47     project          Introduction to Google SEO  - Final       60               100\n",
+      "46     quiz             Foundations of User Experience (UX)       60               100\n",
+      "47     quiz             Introduction to Google SEO  - Final       60               100\n",
       "48     quiz             Visual Elements of User Interface D       60               100\n",
-      "49     quiz             Fundamentals of Visualization with        60               100\n",
-      "50     quiz             Agile with Atlassian Jira  - Final        60               100\n",
+      "49     project          Fundamentals of Visualization with        60               100\n",
+      "50     project          Agile with Atlassian Jira  - Final        60               100\n",
       "[...]\n"
      ]
     }
